# TetrisQt

./: .gitignore  CMakeLists.txt  README.md  main.cpp  stats.cpp  stats.h
dialogs/: saveleader.cpp  saveleader.h  saveleader.ui
gui/: menuform.cpp  menuform.h  menuform.ui  qsfmlcanvas.cpp  qsfmlcanvas.h  tetriswidget.cpp  tetriswidget.h
tetromino/: ipiece.cpp  ipiece.h  jpiece.cpp  jpiece.h  lpiece.cpp  lpiece.h  opiece.cpp  opiece.h  spiece.cpp  spiece.h  tetromino.cpp  tetromino.h  tetrominogenerator.cpp  tetrominogenerator.h  tpiece.cpp  tpiece.h  zpiece.cpp  zpiece.h
utils/: scoreboardutils.cpp  scoreboardutils.h  settings.cpp  settings.h
